--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,36 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --primaryColor: #ba6139;
+  --secundaryColor: #123a3e;
+  --textColor: #f1d4af;
+
+  /*Hover*/
+  --hoverPrimaryColor: #964e2d;
+  --hoverSecundaryColor: #0b2629;
+}
+
 html,
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* max-width: 1400px;
+  margin: auto; */
+}
+
+main {
+  height: 100vh;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
